--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -22,7 +22,7 @@
         <td><%= blog.status %></td>
         <td><%= link_to 'Show', blog %></td>
         <td><%= link_to 'Edit', edit_blog_path(blog) %></td>
-        <td><%= link_to 'Destroy', blog, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', blog, method: :delete, :id => "delete-blog-#{blog.id}" %></td>
       </tr>
     <% end %>
   </tbody>
