--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,5 +1,6 @@
 <% if current_user.present? %>
  <%= link_to 'Sign Out', destroy_user_session_path, :method => 'delete' %>
+ <%= link_to 'Blog', blogs_path %>
 <%else%>
  <%= link_to 'Registration', new_user_registration_path %>
 <%end%>
